--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,12 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>5.3.2.RELEASE</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
